--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - '3.6'
 install: pip install -r requirements.txt
 script:
+  - flake8 impysonator
+  - pep8 impysonator
   - py.test --cov=impysonator
 after_success:
   - coveralls
